# attractors2023

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/source/: conf.py  index.rst  modules.rst
docs/source/_static/: pydata-custom.css
notebooks/: clifford_explorer.ipynb
src/attractors2023/: attractors.py  attractors_explorer.py  attractors_panel.py  maths.py  shared.py
src/attractors2023/data/: attractors.yml
tests/: test_attractors.py  test_maths.py  test_shared.py
