[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "attractors2023"
dynamic = ["version"]
description = 'An updated version of PyViz panel attractors dashboards'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "Joseph Barraud", email = "joseph.barraud@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pandas",
  "numba",
  "datashader",
  "colorcet",
  "bokeh",
  "holoviews",
  "panel",
  "param",
]

[project.urls]
Documentation = "https://github.com/jobar8/attractors2023#readme"
Issues = "https://github.com/jobar8/attractors2023/issues"
Source = "https://github.com/jobar8/attractors2023"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/attractors2023/_version.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest", "pytest-cov"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["black>=23.1.0", "mypy>=1.0.0", "ruff>=0.0.243"]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/attractors2023 tests}"
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style", "typing"]

[tool.hatch.envs.docs]
template = "docs" # disable inheritance
dependencies = [
  "sphinx==7.0.1",
  "pydata-sphinx-theme",
  "sphinx-autodoc-typehints",
  "numpydoc==1.6.0",
  "sphinxcontrib-mermaid",
  "myst-parser",
  "sphinx-click",
  "pydocstringformatter",
]

[tool.hatch.envs.docs.scripts]
clean = [
  "rm -rf docs/build/html",
  "rm -rf docs/build/doctrees",
  "rm -rf docs/build/linkcheck",
  "rm -rf docs/source/_autosummary",
]
html = "sphinx-build -b html docs/source docs/build/html"
linkcheck = "sphinx-build -b linkcheck docs/source docs/build/linkcheck"
preview = ["html", "firefox docs/build/html/reference_index.html"]
format = "pydocstringformatter src/attractors2023"

[tool.black]
target-version = ["py310"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Manage quotes with formatter
  "Q000",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.isort]
known-first-party = ["attractors2023"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["attractors2023", "tests"]
branch = true
parallel = true
omit = ["src/attractors2023/__about__.py"]

[tool.coverage.paths]
attractors2023 = ["src/attractors2023", "*/attractors2023/src/attractors2023"]
tests = ["tests", "*/attractors2023/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
